ChangeLog for Creandus

2006-10-04 Mike Kelly <pioto@gentoo.org>

	* configure.ac, bash/auth/Makefile.am,
	bash/common/read_groupdata.bash.in, bash/common/read_userdata.bash.in,
	bash/common/Makefile.am, bash/Makefile.am, doc/Makefile.am,
	eselect/Makefile.am: Add a new config variable, CREANDUS_CONFDIR,
	which defaults to /etc/creandus. It can contain user overrides of
	accounts data files, or additional ones.  Make sure that
	read_{user,group}data search it as well.

	* bash/common/load_config.bash.in, bash/common/read_groupdata.bash.in,
	bash/common/read_userdata.bash.in: Change the config file format to
	key="value", rather than key: value.

2006-10-04 Mike Kelly <pioto@gentoo.org>

	* bash/auth/Makefile.am, bash/delgroup.bash.in,
	bash/install_fail.bash.in, bash/deluser.bash.in,
	bash/addgroup.bash.in, bash/db.bash.in, bash/common/die_TEST.bash.in,
	bash/common/read_groupdata.bash.in, bash/common/read_userdata.bash.in,
	bash/common/config.bash.in, bash/common/getent_TEST.bash.in,
	bash/common/Makefile.am, bash/adduser.bash.in, bash/cleanup.bash.in,
	bash/Makefile.am, bash/add.bash.in, doc/Makefile.am,
	eselect/Makefile.am, eselect/users.eselect.in, configure.ac: Rename
	SCRIPTDIR to CREANDUS_SCRIPTDIR.

2006-09-22 Mike Kelly <pioto@gentoo.org>

	* doc/API_flowchart.dia, doc/API_flowchart.png,
	doc/API_flowchart2.dia, doc/API_flowchart2.png: Update the flowcharts
	to say "creandus" instead of "dynusers".

	* ChangeLog: Clean up a bit.

2006-09-22 Mike Kelly <pioto@gentoo.org>

	* eselect/Makefile.am, doc/Makefile.am, bash/auth/Makefile.am,
	bash/common/Makefile.am, bash/Makefile.am: Beautify the DOSED stuff a
	bit.

2006-09-22 Mike Kelly <pioto@gentoo.org>

	* docs/datafiles.txt, bash/common/read_groupdata.bash.in,
	bash/common/read_userdata.bash.in: Switch the default settings file to
	be called PROFILEDIR/accounts/defaults, and update documentation to
	reflect this change.

2006-09-07 Mike Kelly <pioto@gentoo.org>

	* NEWS: Prepare for 0.5.0.
