@@ -24,11 +24,10 @@ describe_show_options() {
 }
 
 do_show() {
-	local scriptdir="${ROOT}""@CREANDUS_SCRIPTDIR@"
+	local scriptdir="${ROOT}@CREANDUS_SCRIPTDIR@"
 
-	local dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.bash\" DBDIR)"
-	local mode=all
-	mode=${mode:-${1}}
+	local dbdir="${ROOT}$(load_config "${scriptdir}/common/config.bash" DBDIR)"
+	local mode=${1:-all}
 
 	case ${mode} in
 		users)
@@ -83,7 +82,7 @@ describe_scan_options() {
 }
 
 do_scan() {
-	local scriptdir="${ROOT}""@CREANDUS_SCRIPTDIR@"
+	local scriptdir="${ROOT}@CREANDUS_SCRIPTDIR@"
 
 	# Parse our commandline args
 	local target="${ROOT:-/}"
@@ -116,14 +115,14 @@ do_scan() {
 	done
 
 	if [[ ! ${valid_params} ]] ; then
-		echo "You didn't provide one of the required paramenters."
+		echo "You didn't provide one of the required parameters."
 		echo "You can see a list of dead users and groups by running:"
 		if [[ "${0}" == "eselect" ]] ; then
 			echo "  \$ eselect users update --pretend"
 		else
 			echo "  \$ $0 update --pretend"
 		fi
-		die -q "You must provide either a user or group for the scan action."
+		die -q "You must provide either a user or a group for the scan action."
 	fi
 
 	target="${target} -print0"
@@ -144,15 +143,15 @@ describe_update_parameters() {
 }
 
 describe_update_options() {
-	echo -n "--pretend|-p : Don't actually remove. List candidates only."
+	echo "--pretend|-p : Don't actually remove. List candidates only."
 }
 
 do_update() {
 	local pretend deadusers deadgroups
-	local scriptdir="${ROOT}""@CREANDUS_SCRIPTDIR@"
+	local scriptdir="${ROOT}@CREANDUS_SCRIPTDIR@"
 
-	local dbdir="${ROOT}$(load_config \"${scriptdir}/common/config.bash\" DBDIR)"
-	local userspace="$(cat \"${DBDIR}/userspace\")"
+	local dbdir="${ROOT}$(load_config "${scriptdir}/common/config.bash" DBDIR)"
+	local userspace="$(<  "${DBDIR}/userspace")"
 
 	# Parse our commandline args
 	while [[ ${1#--} != ${1} ]] ; do
